--- a/socials.html
+++ b/socials.html
@@ -46,7 +46,8 @@
           <a href="socials.html" class="navbar5_link w-nav-link w--current">Socials</a>
         </div>
         <div class="navbar5_menu-right">
-          <a href="https://my-store-bc2fca.creator-spring.com/" target="_blank" class="button is-secondary is-small w-button">Shop</a>
+          <a href="https://my-store-bc2fca.creator-spring.com/" target="_blank"
+            class="button is-secondary is-small w-button">Shop</a>
           <a href="contact.html" class="button is-small w-button">Contact</a>
         </div>
       </nav>
@@ -66,16 +67,16 @@
         style="transition: height 0.5s, transform 400ms; transform: translateY(0px) translateX(0px);"
         data-nav-menu-open="">
         <div class="navbar5_menu-left">
-          <a href="index.html" id="home" aria-current="page"
-            class="navbar5_link w-nav-linkw--nav-link-open">Home</a>
-          <a href="booking.html" id="booking" aria-current="page"
-            class="navbar5_link w-nav-link w--nav-link-open">FPV Pilot
+          <a href="index.html" id="home" aria-current="page" class="navbar5_link w-nav-linkw--nav-link-open">Home</a>
+          <a href="booking.html" id="booking" aria-current="page" class="navbar5_link w-nav-link w--nav-link-open">FP
+            Pilot
             Booking</a>
           <a href="services.html" class="navbar5_link w-nav-link w--nav-link-open">Drone Services</a>
           <a href="socials.html" class="navbar5_link w-nav-link w--current w--nav-link-open">Socials</a>
         </div>
         <div class="navbar5_menu-right">
-          <a href="https://my-store-bc2fca.creator-spring.com/" target="_blank" class="button is-secondary is-small w-button">Shop</a>
+          <a href="https://my-store-bc2fca.creator-spring.com/" target="_blank"
+            class="button is-secondary is-small w-button">Shop</a>
           <a href="contact.html" class="button is-small w-button">Contact</a>
         </div>
       </nav>
@@ -309,12 +310,13 @@ a,
                   <div class="text-align-center">
                     <div class="max-width-large">
                       <div class="margin-bottom margin-xsmall">
-                        <div class="text-weight-semibold">Connect</div>
+                        <div class="text-weight-semibold" data-content="socials_header_subtitle">Connect</div>
                       </div>
                       <div class="margin-bottom margin-small">
-                        <h2>Follow My FPV Journey</h2>
+                        <h2 data-content="socials_header_title">Follow My FPV Journey</h2>
                       </div>
-                      <p class="text-size-medium">Stay connected and get the latest updates, behind-the-scenes footage,
+                      <p class="text-size-medium" data-content="socials_header_description">Stay connected and get the
+                        latest updates, behind-the-scenes footage,
                         and exclusive content from my FPV adventures. Join me on social media to see the world from a
                         unique perspective and be part of the FPV community.</p>
                     </div>
@@ -325,26 +327,30 @@ a,
                     <div class="margin-bottom margin-small"><img src="images/insta.svg" loading="lazy" alt=""
                         class="icon-1x1-smally icon-big"></div>
                     <div class="margin-bottom margin-small">
-                      <h3 class="heading-style-h4">Follow Me on Instagram</h3>
+                      <h3 class="heading-style-h4" data-content="socials_instagram_title">Follow Me on Instagram</h3>
                     </div>
-                    <p>Experience the thrill of FPV flying through stunning photos and short clips. Follow my Instagram
+                    <p data-content="socials_instagram_text">Experience the thrill of FPV flying through stunning photos and short clips. Follow my Instagram
                       for daily updates, tips, and snapshots of my latest projects and adventures.</p>
                   </div>
                   <div class="social-media_features-list_item">
                     <div class="margin-bottom margin-small"><img src="images/youtube.svg" loading="lazy" alt=""
                         class="icon-1x1-smally icon-big"></div>
                     <div class="margin-bottom margin-small">
-                      <h3 class="heading-style-h4">Subscribe to My YouTube Channel</h3>
+                      <h3 class="heading-style-h4" data-content="socials_youtube_title">Subscribe to My YouTube Channel</h3>
                     </div>
-                    <p>Watch in-depth videos of my FPV flights, tutorials, and reviews. Subscribe to my YouTube channel
+                    <p data-content="socials_youtube_text">Watch in-depth videos of my FPV flights, tutorials, and reviews. Subscribe to my YouTube channel
                       for immersive content that takes you inside the world of FPV piloting, from epic flights to
                       detailed build guides.</p>
                   </div>
                 </div>
                 <div class="margin-top margin-xlarge">
                   <div class="button-group-2 is-center">
-                    <a href="https://www.instagram.com/AE0NFPV" class="button-2 w-button"><img style="margin-right: 16px;" height="35px" src="images/insta.svg" alt="instagram">Instagram</a>
-                    <a href="https://www.youtube.com/c/AE0NFPV" class="button-2 w-button"><img style="margin-right: 16px;" height="35px" src="images/youtube.svg" alt="youtube">Youtube</a>
+                    <a href="#" data-content="socials_instagram_link" data-link class="button-2 w-button"><img
+                        style="margin-right: 16px;" height="35px" src="images/insta.svg" alt="instagram">
+                      <span data-content="socials_instagram_button">Instagram</span></a>
+                    <a href="#" data-content="socials_youtube_link" data-link class="button-2 w-button"><img
+                        style="margin-right: 16px;" height="35px" src="images/youtube.svg" alt="youtube">
+                      <span data-content="socials_youtube_button">Youtube</span></a>
                   </div>
                 </div>
               </div>
@@ -360,9 +366,9 @@ a,
                 <div class="text-align-center">
                   <div class="max-width-large align-center">
                     <div class="margin-bottom margin-small">
-                      <h2>FPV Highlights</h2>
+                      <h2 data-content="socials_highlights_title">FPV Highlights</h2>
                     </div>
-                    <p class="text-size-medium">Discover the most exciting moments from my FPV adventures. From
+                    <p class="text-size-medium" data-content="socials_highlights_description">Discover the most exciting moments from my FPV adventures. From
                       breathtaking aerial shots to intricate drone builds, this section showcases the best of what FPV
                       has to offer. Dive in and see why I am passionate about flying and creating with drones.</p>
                   </div>
@@ -370,17 +376,17 @@ a,
               </div>
               <div class="w-layout-grid social-media_gallery_component">
                 <div class="w-layout-grid social-media_gallery_row">
-                  <a href="">
+                  <a href="#" data-content="socials_video1_link" data-link>
                     <div class="video-container">
                       <iframe
-                        src="https://www.youtube.com/embed/kF6S9SSECi8?autoplay=1&mute=1&loop=1&playlist=kF6S9SSECi8&controls=0&showinfo=0&rel=0&modestbranding=1&iv_load_policy=3&disablekb=1"
+                        data-content="socials_video1_embed"
                         frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                     </div>
                   </a>
-                  <a href="">
+                  <a href="#" data-content="socials_video2_link" data-link>
                     <div class="video-container">
                       <iframe
-                        src="https://www.youtube.com/embed/QyyKNLCo2AY?autoplay=1&mute=1&loop=1&playlist=QyyKNLCo2AY&controls=0&showinfo=0&rel=0&modestbranding=1&iv_load_policy=3&disablekb=1"
+                        data-content="socials_video2_embed"
                         frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                     </div>
                   </a>
@@ -417,7 +423,8 @@ a,
                       id="email-2" required="">
                     <a href="#" class="button is-small w-button">Join</a>
                   </form>
-                  <div class="text-size-tiny margin-bottom margin-small">By subscribing, you agree to our Privacy Policy and consent to
+                  <div class="text-size-tiny margin-bottom margin-small">By subscribing, you agree to our Privacy Policy
+                    and consent to
                     receive updates from our company.</div>
                   <div class="success-message w-form-done">
                     <div>Thank you! We&#x27;ve received your submission.</div>
@@ -426,7 +433,8 @@ a,
                     <div>Oops! Something went wrong with the form submission.</div>
                   </div>
                   <a href="https://www.absolutenetwork.de" class="margin-bottom margin-small">
-                    <img class="margin-bottom margin-small" height="50px" src="images/absolutenetwork.svg" loading="lazy" alt="" />
+                    <img class="margin-bottom margin-small" height="50px" src="images/absolutenetwork.svg"
+                      loading="lazy" alt="" />
                     <div> If you're looking to create an outstanding website like this one, reach out to Absolute
                       Network
                       for
@@ -488,32 +496,33 @@ a,
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=66aa136e9a9ec8aec249373f"
     type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
     crossorigin="anonymous"></script>
-    <script>
-      $(document).ready(function () {
-        $('.navbar5_menu-button').on('click', function () {
-          var $menuOverlay = $('.menu-overlay');
-  
-          if ($menuOverlay.css('display') === 'none') {
-            $menuOverlay.css({
-              display: 'block',
-              height: '0'
-            });
-  
-            $menuOverlay.animate({
-              height: '100vh'
-            }, 300); // Höhe auf 100% animieren
-          } else {
-            $menuOverlay.animate({
-              height: '0'
-            }, 300, function () {
-              $menuOverlay.css('display', 'none'); // Nach der Animation display auf none setzen
-            });
-          }
-        });
+  <script>
+    $(document).ready(function () {
+      $('.navbar5_menu-button').on('click', function () {
+        var $menuOverlay = $('.menu-overlay');
+
+        if ($menuOverlay.css('display') === 'none') {
+          $menuOverlay.css({
+            display: 'block',
+            height: '0'
+          });
+
+          $menuOverlay.animate({
+            height: '100vh'
+          }, 300); // Höhe auf 100% animieren
+        } else {
+          $menuOverlay.animate({
+            height: '0'
+          }, 300, function () {
+            $menuOverlay.css('display', 'none'); // Nach der Animation display auf none setzen
+          });
+        }
       });
-    </script>
+    });
+  </script>
   <script type="module">
     import ColorManager from './js/color-manager.js';
+    import SocialsContentManager from './js/socials-content-manager.js';
   </script>
 </body>
 
