--- a/contact.html
+++ b/contact.html
@@ -89,10 +89,10 @@
             <div class="padding-section-large">
               <div class="w-layout-grid hire-me-today_header_component">
                 <div class="hire-me-today_header_content-left">
-                  <h1>Experienced FPV Pilot</h1>
+                  <h1 data-content="contact_header_title">Experienced FPV Pilot</h1>
                 </div>
                 <div class="hire-me-today_header_content-right">
-                  <p class="text-size-medium">Looking for a skilled FPV pilot to capture stunning aerial footage? Look
+                  <p class="text-size-medium" data-content="contact_header_description">Looking for a skilled FPV pilot to capture stunning aerial footage? Look
                     no further! With years of experience and a passion for drone flying, I&#x27;m ready to take on your
                     project and deliver exceptional results. Contact me today to discuss your needs and let&#x27;s make
                     your vision a reality.</p>
@@ -109,12 +109,12 @@
               <div class="margin-bottom margin-large">
                 <div class="max-width-large">
                   <div class="margin-bottom margin-xsmall">
-                    <div class="text-weight-semibold">Professional Services</div>
+                    <div class="text-weight-semibold" data-content="contact_form_subtitle">Professional Services</div>
                   </div>
                   <div class="margin-bottom margin-small">
-                    <h2>Contact Me</h2>
+                    <h2 data-content="contact_form_title">Contact Me</h2>
                   </div>
-                  <p class="text-size-medium">Fill out the form below to request my services.</p>
+                  <p class="text-size-medium" data-content="contact_form_description">Fill out the form below to request my services.</p>
                 </div>
               </div>
               <div class="max-width-large">
@@ -184,9 +184,9 @@
             <div class="padding-section-large">
               <div class="max-width-large">
                 <div class="margin-bottom margin-small">
-                  <h2>Experienced FPV Pilot for Hire</h2>
+                  <h2 data-content="contact_cta_title">Experienced FPV Pilot for Hire</h2>
                 </div>
-                <p class="text-size-medium">Contact me today to discuss your FPV needs and book my services.</p>
+                <p class="text-size-medium" data-content="contact_cta_description">Contact me today to discuss your FPV needs and book my services.</p>
               </div>
             </div>
           </div>
@@ -291,6 +291,7 @@
   <script src="js/contact-form.js" type="module"></script>
   <script type="module">
     import ColorManager from './js/color-manager.js';
+    import ContactContentManager from './js/contact-content-manager.js';
   </script>
 </body>
 
