--- a/admin/index.html
+++ b/admin/index.html
@@ -41,6 +41,9 @@
                 <li class="nav-item">
                     <a href="#booking" class="nav-link">Booking</a>
                 </li>
+                <li class="nav-item">
+                    <a href="#navbar" class="nav-link">Navigation</a>
+                </li>
             </ul>
         </nav>
 
@@ -812,6 +815,40 @@
                         <div class="form-group">
                             <label for="bookingContactButton">Button Text:</label>
                             <input type="text" id="bookingContactButton" name="booking_contact_button" required>
+                        </div>
+                        <button type="submit" class="button">Save Changes</button>
+                    </form>
+                </div>
+            </section>
+
+            <section id="navbar" class="content-section">
+                <h2>Navigation Settings</h2>
+                <div class="settings-form-container">
+                    <form id="navbarForm" class="settings-form">
+                        <h3>Navigation Links</h3>
+                        <div class="form-group">
+                            <label for="navHome">Home Link Text:</label>
+                            <input type="text" id="navHome" name="nav_home" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="navBooking">Booking Link Text:</label>
+                            <input type="text" id="navBooking" name="nav_booking" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="navServices">Services Link Text:</label>
+                            <input type="text" id="navServices" name="nav_services" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="navSocials">Socials Link Text:</label>
+                            <input type="text" id="navSocials" name="nav_socials" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="navShop">Shop Button Text:</label>
+                            <input type="text" id="navShop" name="nav_shop" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="navContact">Contact Button Text:</label>
+                            <input type="text" id="navContact" name="nav_contact" required>
                         </div>
                         <button type="submit" class="button">Save Changes</button>
                     </form>
