--- a/booking.html
+++ b/booking.html
@@ -41,16 +41,14 @@
           class="navbar5_logo"></a>
       <nav role="navigation" class="navbar5_menu w-nav-menu">
         <div class="navbar5_menu-left">
-          <a href="index.html" id="home" aria-current="page" class="navbar5_link w-nav-link">Home</a>
-          <a href="booking.html" id="home" aria-current="page" class="navbar5_link w-nav-link w--current">FPV Pilot
-            Booking</a>
-          <a href="services.html" class="navbar5_link w-nav-link">Drone Services</a>
-          <a href="socials.html" class="navbar5_link w-nav-link">Socials</a>
+          <a href="index.html" id="home" aria-current="page" class="navbar5_link w-nav-link" data-content="nav_home">Home</a>
+          <a href="booking.html" id="booking" class="navbar5_link w-nav-link w--current" data-content="nav_booking">FPV Pilot Booking</a>
+          <a href="services.html" class="navbar5_link w-nav-link" data-content="nav_services">Drone Services</a>
+          <a href="socials.html" class="navbar5_link w-nav-link" data-content="nav_socials">Socials</a>
         </div>
         <div class="navbar5_menu-right">
-          <a href="https://my-store-bc2fca.creator-spring.com/" target="_blank"
-            class="button is-secondary is-small w-button">Shop</a>
-          <a href="contact.html" class="button is-small w-button">Contact</a>
+          <a href="https://my-store-bc2fca.creator-spring.com/" target="_blank" class="button is-secondary is-small w-button" data-content="nav_shop">Shop</a>
+          <a href="contact.html" class="button is-small w-button" data-content="nav_contact">Contact</a>
         </div>
       </nav>
       <div class="navbar5_menu-button w-nav-button">
@@ -645,6 +643,7 @@ a,
   <script type="module">
     import ColorManager from './js/color-manager.js';
     import BookingContentManager from './js/booking-content-manager.js';
+    import NavbarContentManager from './js/navbar-content-manager.js';
   </script>
 
 </body>
