footer im backend anpassbar

--- a/admin/index.html
+++ b/admin/index.html
@@ -44,6 +44,9 @@
                 <li class="nav-item">
                     <a href="#navbar" class="nav-link">Navigation</a>
                 </li>
+                <li class="nav-item">
+                    <a href="#footer" class="nav-link">Footer</a>
+                </li>
             </ul>
         </nav>
 
@@ -849,6 +852,68 @@
                         <div class="form-group">
                             <label for="navContact">Contact Button Text:</label>
                             <input type="text" id="navContact" name="nav_contact" required>
+                        </div>
+                        <button type="submit" class="button">Save Changes</button>
+                    </form>
+                </div>
+            </section>
+
+            <section id="footer" class="content-section">
+                <h2>Footer Settings</h2>
+                <div class="settings-form-container">
+                    <form id="footerForm" class="settings-form">
+                        <h3>Newsletter Section</h3>
+                        <div class="form-group">
+                            <label for="footerNewsletterText">Newsletter Text:</label>
+                            <textarea id="footerNewsletterText" name="footer_newsletter_text" required></textarea>
+                        </div>
+                        <div class="form-group">
+                            <label for="footerPrivacyNotice">Privacy Notice:</label>
+                            <textarea id="footerPrivacyNotice" name="footer_privacy_notice" required></textarea>
+                        </div>
+                        
+                        <h3>Menu Section</h3>
+                        <div class="form-group">
+                            <label for="footerPagesTitle">Pages Section Title:</label>
+                            <input type="text" id="footerPagesTitle" name="footer_pages_title" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="footerLinkHome">Home Link Text:</label>
+                            <input type="text" id="footerLinkHome" name="footer_link_home" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="footerLinkHire">Hire Link Text:</label>
+                            <input type="text" id="footerLinkHire" name="footer_link_hire" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="footerLinkServices">Services Link Text:</label>
+                            <input type="text" id="footerLinkServices" name="footer_link_services" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="footerLinkSocials">Socials Link Text:</label>
+                            <input type="text" id="footerLinkSocials" name="footer_link_socials" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="footerSocialTitle">Social Section Title:</label>
+                            <input type="text" id="footerSocialTitle" name="footer_social_title" required>
+                        </div>
+                        
+                        <h3>Bottom Section</h3>
+                        <div class="form-group">
+                            <label for="footerCopyright">Copyright Text:</label>
+                            <input type="text" id="footerCopyright" name="footer_copyright" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="footerPrivacyLink">Privacy Link Text:</label>
+                            <input type="text" id="footerPrivacyLink" name="footer_privacy_link" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="footerTermsLink">Terms Link Text:</label>
+                            <input type="text" id="footerTermsLink" name="footer_terms_link" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="footerCookiesLink">Cookies Link Text:</label>
+                            <input type="text" id="footerCookiesLink" name="footer_cookies_link" required>
                         </div>
                         <button type="submit" class="button">Save Changes</button>
                     </form>
